<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:title="@string/faw_search"
        android:orderInCategory="200"
        android:icon="@drawable/ic_search_light"
        app:showAsAction="ifRoom"
        />
</menu>
