...
    <string name="recuperar_senha">Recuperar senha</string>

    <string name="alter_senha">Caso altere a senha, ocorrerá logout em sua conta.</string>
    <string name="menu_adicionar">Adicionar</string>
    <string name="menu_adicionar_propriedade">Adicionar uma propriedade</string>
    <string name="menu_adicionar_animal">Adicionar um animal</string>
    <string name="menu_visualizar_animais">Visualizar animais</string>
    <string name="menu_historico">Ver histórico de dados</string>
    <string name="menu_excluir">Excluir</string>
    <string name="menu_editar">Editar</string>
    <string name="menu_relatorio">Relatório</string>

    <string name="link_novo_cadastro">Não é cadastrado? <b>Crie sua conta</b></string>
...
    <string name="campo_add_registro">Novo Registro Geral</string>
    <string name="campo_historico">Histórico de dados</string>
    <string name="campo_grupo">Grupo</string>

    <string name="campo_identificador">Identificador</string>
    <string name="campo_data_nascimento">Data de nascimento</string>
    <string name="campo_nenhum_animal">Nenhum animal cadastrado</string>
    <string name="campo_nenhuma_propriedade">Nenhuma propriedade cadastrada</string>

    <string name="campo_nenhum_proprietario">Nenhum proprietário cadastrado</string>
    <string name="campo_nenhum_composto">Nenhum composto cadastrado</string>
    <string name="campo_nenhuma_dieta">Nenhuma dieta cadastrada</string>
    <string name="campo_escolha_ativo">Animal está ativo?</string>
...
